адаптация блоков advantages, care и team

--- a/source/index.html
+++ b/source/index.html
@@ -467,8 +467,8 @@
               </div>
             </li>
           </ul>
-          <button class="slider__button slider__button--prev"></button>
-          <button class="slider__button slider__button--next"></button>
+          <button class="team__slider-button slider__button slider__button--prev team__slider-button--prev"></button>
+          <button class="team__slider-button slider__button slider__button--next team__slider-button--next"></button>
         </div>
       </div>
     </section>
