--- a/source/index.html
+++ b/source/index.html
@@ -104,7 +104,7 @@
               <source media="(max-width: 767px)"
                 srcset="./img/breed-features-mobile@1x.png 1x, ./img/breed-features-mobile@2x.png 2x">
               <source media="(max-width: 1365px)"
-                srcset="./img/breed-features-tablet@1x.png 1x, ./img/breed-features-tablet@2x.png">
+                srcset="./img/breed-features-tablet@1x.png 1x, ./img/breed-features-tablet@2x.png 2x">
               <img class="breed__picture-img" src="./img/breed-features-desktop@1x.png" alt="Изображение породы">
             </picture>
           </div>
@@ -617,6 +617,7 @@
       </ul>
       <p class="footer__address">Новосибирск, Пушкинский проспект, 19</p>
       <a class="footer__tel" href="tel:+73839006465">+7 (383) 900-64-65</a>
+    </div>
   </footer>
 </body>
 
